[package]
name = "jwt-secret-finder"
version = "0.1.0"
authors = ["Grant Miner"]
edition = "2018"
publish = false

[dependencies]
structopt = "^0.3.19"
structopt-derive = "^0.4.12"
jsonwebtoken = "^7.2.0"
rustc-serialize = "^0.3.24"
rust-crypto = "^0.2.36"
clap = "^2.33.3"
threadpool = "^1.8.1"
num_cpus = "^1.13.0"
