[package]
name = "jwtc"
version = "0.1.0"
authors = ["Grant Miner"]
edition = "2021"
publish = false

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ring = "0.17"
aws-lc-rs = "1"
base64 = "0.22"
num_cpus = "1.17"

[[bin]]
name = "hmac_bench"
path = "benches/hmac_bench.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
